# AI4EO_Zilzila_esa_challenge

./: README.md  pyproject.toml  requirements.txt
engine/: dataset.py  extractor_bbox.py  models.py  test.py  train.py  utils.py
