[project]
name = "AI4EO-Zilzila"
version = "0.1.0"
dependencies = [
    "affine==2.4.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "click==8.2.1",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.13.1",
    "fonttools==4.59.1",
    "fsspec==2024.6.1",
    "geopandas==1.1.1",
    "imageio==2.37.0",
    "Jinja2==3.1.4",
    "kiwisolver==1.4.9",
    "lazy_loader==0.4",
    "MarkupSafe==2.1.5",
    "matplotlib==3.10.5",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pyogrio==0.11.1",
    "pyparsing==3.2.3",
    "pyproj==3.7.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "rasterio==1.4.3",
    "scikit-image==0.25.2",
    "scipy==1.16.1",
    "setuptools==70.2.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "sympy==1.13.3",
    "tifffile==2025.6.11",
    "torch==2.8.0+cu126",
    "torchvision==0.23.0+cu126",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
    "tzdata==2025.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"